--- a/index.html
+++ b/index.html
@@ -28,30 +28,16 @@
       <![endif]-->
    </head>
    <body class="size-1140">
-   <!-- Quantcast Tag -->
-<script type="text/javascript">
-var _qevents = _qevents || [];
+   <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-(function() {
-var elem = document.createElement('script');
-elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
-elem.async = true;
-elem.type = "text/javascript";
-var scpt = document.getElementsByTagName('script')[0];
-scpt.parentNode.insertBefore(elem, scpt);
-})();
+  ga('create', 'UA-98708265-1', 'auto');
+  ga('send', 'pageview');
 
-_qevents.push({
-qacct:"p-jU5WNtZez8Kjz"
-});
 </script>
-
-<noscript>
-<div style="display:none;">
-<img src="//pixel.quantserve.com/pixel/p-jU5WNtZez8Kjz.gif" border="0" height="1" width="1" alt="Quantcast"/>
-</div>
-</noscript>
-<!-- End Quantcast tag -->
       <!-- TOP NAV WITH LOGO -->
       <header class="margin-bottom">
          <div class="line">
@@ -152,7 +138,7 @@ qacct:"p-jU5WNtZez8Kjz"
                      <a href="post-2.html">
                         <h2>Trend Setters</h2>
                      </a>
-                     <p>Michael a.k.a "Kamau",the handsome dude...the guy whose got many of the pretty ladies!!! He is a grey hacker and also does some little of coding. Good in finding stories and will surely keep this blog upto date with hot stories.  </p>
+                     <p>These gentlemen and ladies define the elegance of dressing and they bring out the new sence of fashion in the vicinity of the campus.  </p>
                      <a class="continue-reading" href="post-2.html">Continue reading</a>
 
                   </div>
@@ -201,7 +187,7 @@ qacct:"p-jU5WNtZez8Kjz"
                      <a href="post-4.html">
                         <h2>Multimedia Forbes List</h2>
                      </a>
-                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi enim.</p>
+                     <p>Ever thought of the richest kids in the campus, shadows gives you the insight of the students who source out their cash from different sources.</p>
                      <a class="continue-reading" href="post-4.html">Continue reading</a> 
                   </div>
                   <!-- date -->
@@ -220,7 +206,7 @@ qacct:"p-jU5WNtZez8Kjz"
                      <a href="post-5.html">
                         <h2>Just for ladies!Mmu Hot Dudes</h2>
                      </a>
-                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p>
+                     <p>Ladies we bring you the hottest gentlemen in the campus, where a lot of crush aspect lays.</p>
                      <a class="continue-reading" href="post-5.html">Continue reading</a> 
                   </div>
                   <!-- date -->
@@ -244,15 +230,15 @@ qacct:"p-jU5WNtZez8Kjz"
                      <p>Multimedia Shadows is the first and only Multimedia University entertainment blog.This is the realest site that posts on what is hot and trending in MMU Kenya.This blog gives you the sneack sniff on the top ten prettiest chicks and top five hot dudes in Multimedia.Being the number one media and technology university,this blog gives you a diverse events line up and the best places to hang out.</p>
                   </div>
                   <!-- NEWS 2 -->
-                  <img src="img/IMG-20170517-WA0008-1.jpg" alt="News 2">
+                  <img src="img/v1.dDsyMDE4MzQ7ajsxNzMyNzsxMjAwOzE3NzI7MjY1OA" alt="News 2">
                   <div class="aside-block margin-bottom">
                      <h3>Scandal Slot!!</h3>
-                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p>
+                     <p>This is a special segment that gives you all the udaku and the mpashoz. Stay tuned for the heartbreaks or any guy caught cheating behind the blocks or the streets of Rongai.We dont spare looses chilez either. </p>
                   </div>
 
                   <!-- AD REGION -->
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170502-WA0007.jpg" alt="ad banner">
+                     <img src="img/IMG-20170522-WA0000.jpg" alt="ad banner">
                   </div>
                </aside>
             </div>
@@ -271,7 +257,9 @@ qacct:"p-jU5WNtZez8Kjz"
                <a class="left" href="http://www.myresponsee.com" title="Responsive framework" target="_blank">Design by: White Panther
                </a>
                <br>
-               <a class="left" href="http://lemayian.online" title="Mike Saoke">Sourced by: <span style="color:brown;">Mike.</span>
+               <a class="left" href="http://lemayian.online" title="Mike Saoke">Created by: <span style="color:brown;">Mike.</span>
+               </a>
+               <a class="left" href="http://lemayian.online" title="Mike Saoke">Branded by: <span style="color:brown;">Mally</span>
                </a>
                <br>
                <a class="left" href="http://lemayian.online" title="James Lemayian">Empowered by: <span style="color:brown;">Lemayian.</span>
