--- a/archive.html
+++ b/archive.html
@@ -194,7 +194,7 @@
                      <img src="img/IMG-20170522-WA0000.jpg" alt="ad banner">          
                   </div>
                   <!-- NEWS 2 -->           
-                  <img src="img/news2.jpg" alt="News 2">          
+                  <img src="img/v1.dDsyMDE4MzQ7ajsxNzMyNzsxMjAwOzE3NzI7MjY1OA" alt="News 2">          
                   <div class="aside-block margin-bottom">
                      <h3>Scandal box</h3>
                      <p>This is a special segment that gives you all the udaku and the mpashoz. Stay tuned for the heartbreaks or any guy caught cheating behind the blocks or the streets of Rongai.We dont spare looses chilez either. </p>
