--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                               <address>
                                  <p><i class="icon-home icon"></i> Multimedia Shadows</p>
                                  <p><i class="icon-globe_black icon"></i> Rongai-Nairobi</p>
-                                 <p><i class="icon-mail icon"></i> marcusokoth@gmail.com</p>
+                                 <p><i class="icon-mail icon"></i> marcusokoth@gmail.com\mosesmally@gmail.com</p>
 								 <p><i class="icon-phone icon"></i> 0790969873/+254711199436</p>
                               </address>
                               <br />
@@ -104,7 +104,7 @@
                <aside>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170502-WA0007.jpg" alt="ad banner">         
+                     <img src="img/Unrestrained night🔥🔥 20170529_231154.jpg" alt="ad banner">         
                   </div>
                </aside>
             </div>
