--- a/event.html
+++ b/event.html
@@ -74,8 +74,8 @@
                      <p>
                         Located just opposite Cleanshelf supermarket in Siron building,Diaspora Lounge is now dubbed the official MMU night club.What happens in Diaspora stays in Diaspora.I got nothing to say about Diaspora,you just have to try the "Diaspora experience".
                        <h3>2. Victorias Lounge</h3>
-					 <img src="img/Screenshot_20170525-175128.png" alt="Fashion">
-                     <p>Dont get me started about the strippers poles,Victorias Lounge has always been the place to be.Its close to campus and also most Cooperative un9iversity students hang out at this club.So if you wanna have the greatest time of your life hangout at victorias.
+					 <img src="img/IMG-20170528-WA0015.jpg" alt="Fashion">
+                     <p>Dont get me started about the strippers poles,Victorias Lounge has always been the place to be.Its close to campus and also most Cooperative university students hang out at this club.So if you wanna have the greatest time of your life hangout at victorias.
                      </p>
                       <h3>3.The Bench</h3>
                 <img src="img/10679553_1559836260999465_2613612197601755338_o.jpg" alt="Fashion">
