--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                      <a href="post-5.html">
                         <h2>Just for ladies!Mmu Hot Dudes</h2>
                      </a>
-                     <p>Ladies we bring you the hottest gentlemen in the campus, where a lot of crush aspect lays.</p>
+                     <p>Ladies we bring you the hottest gentlemen in the campus.</p>
                      <a class="continue-reading" href="post-5.html">Continue reading</a> 
                   </div>
                   <!-- date -->
@@ -227,7 +227,7 @@
                   <img src="img/Screenshot_20170519-004151.png" alt="fashion">
                   <div class="aside-block margin-bottom">
                      <h3>Entertainment Blog</h3>
-                     <p>Multimedia Shadows is the first and only Multimedia University entertainment blog.This is the realest site that posts on what is hot and trending in MMU Kenya.This blog gives you the sneack sniff on the top ten prettiest chicks and top five hot dudes in Multimedia.Being the number one media and technology university,this blog gives you a diverse events line up and the best places to hang out.</p>
+                     <p>This is the realest site that posts on what is hot and trending in MMU Kenya.This blog gives you the sneack sniff on the top ten prettiest chicks and top five hot dudes in Multimedia.Being the number one media and technology university,this blog gives you a diverse events line up and the best places to hang out.</p>
                   </div>
                   <!-- NEWS 2 -->
                   <img src="img/v1.dDsyMDE4MzQ7ajsxNzMyNzsxMjAwOzE3NzI7MjY1OA" alt="News 2">
@@ -238,7 +238,7 @@
 
                   <!-- AD REGION -->
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170522-WA0000.jpg" alt="ad banner">
+                     <img src="img/Unrestrained night🔥🔥 20170529_231154.jpg" alt="ad banner">
                   </div>
                </aside>
             </div>
