--- a/post-3.html
+++ b/post-3.html
@@ -118,7 +118,7 @@
                   <img src="img/Screenshot_20170519-004151.png" alt="News 1">          
                   <div class="aside-block margin-bottom">
                      <h3>Entertainment Blog</h3>
-                     <p>Multimedia Shadows is the first and only Multimedia University entertainment blog.This is the realest site that posts on what is hot and trending in MMU Kenya.This blog gives you the sneack sniff on the top ten prettiest chicks and top five hot dudes in Multimedia.Being the number one media and technology university,this blog gives you a diverse events line up and the best places to hang out.</p>
+                     <p>This is the realest site that posts on what is hot and trending in MMU Kenya.This blog gives you the sneack sniff on the top ten prettiest chicks and top five hot dudes in Multimedia.Being the number one media and technology university,this blog gives you a diverse events line up and the best places to hang out.</p>
                   </div>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
