--- a/post-1.html
+++ b/post-1.html
@@ -10,6 +10,7 @@
       <link rel="stylesheet" href="css/components.css">
       <link rel="stylesheet" href="css/responsee.css">
       <!-- CUSTOM STYLE -->       
+<link rel="stylesheet" href="css/style.css">
       <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="css/template-style.css">
       <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
@@ -127,6 +128,9 @@
                      </p>
                      <img src="img/IMG-20170519-WA0012.jpg" alt="Fashion">
                   
+
+<!-- Use an element to toggle between a like/dislike icon -->
+<i onclick="myFunction(this)" class="fa fa-thumbs-up"></i> 
                      <h2>3.Linet Mahinda</h2>
                        <p>
                         She keeps her game different and avoids limelight, driving a lot of gentlemen in campus crazy for the third year now in multimedia.
@@ -162,11 +166,11 @@
                   <img src="img/Screenshot_20170519-004151.png" alt="News 1">          
                   <div class="aside-block margin-bottom">
                      <h3>Entertainment Blog</h3>
-                     <p>Multimedia Shadows is the first and only Multimedia University entertainment blog.This is the realest site that posts on what is hot and trending in MMU Kenya.This blog gives you the sneack sniff on the top ten prettiest chicks and top five hot dudes in Multimedia.Being the number one media and technology university,this blog gives you a diverse events line up and the best places to hang out.</p>
+                     <p>This is the realest site that posts on what is hot and trending in MMU Kenya.This blog gives you the sneack sniff on the top ten prettiest chicks and top five hot dudes in Multimedia.Being the number one media and technology university,this blog gives you a diverse events line up and the best places to hang out.</p>
                   </div>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170522-WA0000.jpg" alt="ad banner">         
+                     <img src="img/Unrestrained night🔥🔥 20170529_231154.jpg" alt="ad banner">         
                   </div>
                   <!-- LATEST POSTS -->
                   <div class="aside-block margin-bottom">
@@ -199,6 +203,10 @@
                            Ladies we bring you the hottest gentlemen in the campus..
                         </p>
                      </a>
+                  </div>
+                   <!-- AD REGION --> 
+                  <div class="advertising margin-bottom">
+                     <img src="img/Unrestrained night🔥🔥 20170529_231154.jpg" alt="ad banner">         
                   </div>
                </aside>
             </div>
