--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
                   </div>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170517-WA0008-1.jpg" alt="ad banner">         
+                     <img src="img/photo.jpg" alt="ad banner">         
                   </div>
                </aside>
             </div>
