--- a/post-1.html
+++ b/post-1.html
@@ -82,8 +82,8 @@
                      </div>
                      <!-- date -->                 
                      <div class="s-12 l-1 post-date">
-                        <p class="date">02</p>
-                        <p class="month">May</p>
+                        <p class="date">01</p>
+                        <p class="month">June</p>
                      </div>
                   </div>
                   <!-- text -->                 
@@ -96,11 +96,11 @@
                      </p>
                      <img src="img/IMG-20170518-WA0021.jpg" alt="Fashion">
                      <p>
-                     <h3>9.Anita Mukai </h3>
+                     <h3>9.Maureen Kanana</h3>
                         <p>
-                      Speaking of boundaries, her beauty has gone beyond it.
+                      Only one word can describe how beautiful this chille is.Gorgeous
                      </p>
-                      <img src="img/IMG-20170519-WA0086.jpg" alt="Fashion">
+                      <img src="img/a6eb0aecdb8ddd07f22a0f08cb90510e.jpg" alt="Fashion">
                    <h2>8.Mercy Nimo</h2>
                     <p>
                     Campus proclaimed 'Huddah' is among the hottest chick on campus.Her pretty eyes completes her looks.
@@ -111,11 +111,12 @@
                         Call it a mixture of samburu breed and a kikuyu bringing the outward of the most perfect beauty in the campus.
                      </p>
                       <img src="img/IMG-20170519-WA0062.jpg" alt="Fashion">
+
                      <h2>6.Esther Gisharu</h2>
                      <p>
                      She is blessed with the perfect smile making any bachelor stare.
                      </p>
-                      <img src="img/416257246de5b7903df31fc6bce739a1.jpg" alt="Fashion">
+                      <img src="img/c71f1913ad65a9876613fc1421fe6819.jpg" alt="Fashion">
                      <h2>5.Kimberly Muthoni</h2>
                       <p>
                   The talk of the streets in campus, she knows and believes being beautiful is the key and loves modeling and show casing.
@@ -128,9 +129,6 @@
                      </p>
                      <img src="img/IMG-20170519-WA0012.jpg" alt="Fashion">
                   
-
-<!-- Use an element to toggle between a like/dislike icon -->
-<i onclick="myFunction(this)" class="fa fa-thumbs-up"></i> 
                      <h2>3.Linet Mahinda</h2>
                        <p>
                         She keeps her game different and avoids limelight, driving a lot of gentlemen in campus crazy for the third year now in multimedia.
