--- a/post-2.html
+++ b/post-2.html
@@ -81,8 +81,8 @@
                      </div>
                      <!-- date -->                 
                      <div class="s-12 l-1 post-date">
-                        <p class="date">24</p>
-                        <p class="month">May</p>
+                        <p class="date">01</p>
+                        <p class="month">June</p>
                      </div>
                   </div>
                   <!-- text -->                 
@@ -95,16 +95,16 @@
                     <div class="s-12 l-11 post-image">                   
                         <img src="img/Screenshot_20170518-191823.png" alt="Fashion">              
                      </div>
-                     <h2>4.Tiffany Wambui</h2>
+                     <h2>4.Malemba</h2>
                      <p> 
                        She believes being glamourous in every occasion is good and it brings the outlook of you also in your heart and mind. 
                      </p>
-                           <img src="img/IMG-20170519-WA0055.jpg" alt="Fashion">    
-                     <h2>3.Scolastica Ruby</h2>
+                           <img src="img/aa16c6c82e194e3d718f742a4ff21772.jpg" alt="Fashion">    
+                     <h2>3.Guantai </h2>
                      <p>
-                        She was once Miss Migori county and now the nairobi's next top model winner.She applauses elegance.
+                        Guantai pulls the best look on campus.His simplicity depicts his as one of the treendies guy on campus.
                      </p>
-                           <img src="img/IMG-20170520-WA0012.jpg" alt="Fashion">    
+                           <img src="img/987e14503f99533ec14cbf7a18161c13.jpg" alt="Fashion">    
                      <h2>2.Mwadime</h2>
                      <p>
                        Call him MR VINTAGE, he rock the ‘90s’ every day. Salute to the beard man.
@@ -136,7 +136,7 @@
                   </div>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170522-WA0001.jpg" alt="ad banner">        
+                     <img src="img/photo.jpg" alt="ad banner">        
                   </div>
                   <!-- LATEST POSTS -->
                   <div class="aside-block margin-bottom">
