--- a/post-3.html
+++ b/post-3.html
@@ -81,8 +81,8 @@
                      </div>
                      <!-- date -->                 
                      <div class="s-12 l-1 post-date">
-                        <p class="date">02</p>
-                        <p class="month">May</p>
+                        <p class="date">01</p>
+                        <p class="month">June</p>
                      </div>
                   </div>
                   <!-- text -->                 
@@ -95,7 +95,7 @@
                      <h3>2.The Travellers Photography</h3>
                      <img src="img/The Travellor 20170525_171407.jpg" alt="Fashion">
                      <p>
-                        I got nothing to say about the travellers.They are just owesome,These guys capture the finest detail of any model.
+                        I got nothing to say about the travellers.He is just owesome,This guy captures the finest detail of any model.
                      </p>
                        <h3>3.Doncliq Photography</h3>
                      <img src="img/DSC_3751-1.jpg" alt="Fashion">
@@ -122,7 +122,7 @@
                   </div>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170522-WA0001.jpg" alt="ad banner">         
+                     <img src="img/photo.jpg" alt="ad banner">         
                   </div>
                   <!-- LATEST POSTS -->
                   <div class="aside-block margin-bottom">
