--- a/post-4.html
+++ b/post-4.html
@@ -77,12 +77,12 @@
                   <div class="post-4 line">
                      <!-- image -->                 
                      <div class="s-12 l-11 post-image">                   
-                        <img src="img/IMG-20170519-WA0068.jpg" alt="Fashion">              
+                        <img src="img/455751.jpg" alt="Fashion">              
                      </div>
                      <!-- date -->                 
                      <div class="s-12 l-1 post-date">
-                        <p class="date">02</p>
-                        <p class="month">May</p>
+                        <p class="date">01</p>
+                        <p class="month">June</p>
                      </div>
                   </div>
                   <!-- text -->                 
@@ -93,6 +93,7 @@
                      <p>
                        Call him ‘mzee wa chafua’, creating his cash from the food hotels in the campus and making him one of the kingpin in Multimedia University.       
                      </p>
+                     <img src="img/IMG-20170519-WA0068.jpg" alt="Fashion">
                      <h2>2.Linda Nyalwale</h2>
                        <p>
                        She deals with importation of clothes from other countries to Kenya and has a few clothes boutique which brings her the cash for her to stand out.
