--- a/post-5.html
+++ b/post-5.html
@@ -77,8 +77,8 @@
                   <div class="post-5 line">
                      <!-- date -->                 
                      <div class="s-12 post-date">
-                        <p class="date">02</p>
-                        <p class="month">May</p>
+                        <p class="date">01</p>
+                        <p class="month">June</p>
                      </div>
                   </div>
                   <!-- text -->                 
@@ -89,21 +89,21 @@
                     Proves charity and giving back to the society is the key. ‘POINTI’ is the name given to him, loves soccer and an IT man. 
                      </p>
                      <img src="img/IMG-20170519-WA0016.jpg" alt="Dude">
-                     <h2>2.Steven Nyandusi</h2>
+                     <h2>2.Victor Maina</h2>
                      <p>
-                        Implements a lot to become successful in this century, a model and Mr. Politician in the premises of our Multimedia Campus.
+                        Among the hottest guy in campus.Ladies take it slow ,he is taken.
                      </p>
-                     <img src="img/IMG-20170519-WA0022.jpg" alt="Dude">
+                     <img src="img/9e6248cd168ae438dd330238de30e201.jpg" alt="Dude">
                      <h2>3.Said Swalleh</h2>
                      <p>
                     Coastal experiences with an ease in himself in everything he does.
                      </p>
                      <img src="img/IMG-20170523-WA0003.jpg" alt="Dude">
-                     <h2>4.Moses Mali</h2>
+                     <h2>4.Steven Nyandusi</h2>
                      <p>
-                        This guy pulls out the look of suits well enough. currently Mr MMU.
+                        This guy pulls out the look of suits well enough.
                      </p>
-                     <img src="img/IMG-20170509-WA0002.jpg" alt="Dude">
+                     <img src="img/IMG-20170519-WA0022.jpg" alt="Dude">
                      <h2>5.Kingsly</h2>
                      <p>
                      Once the MR MMU 2015-2016 embracing fashion and runways as part of his living.
