--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                <!-- AD REGION -->
                <div class="line">
                   <div class="advertising horizontal">
-                     <img src="img/banner-horizontal.jpg" alt="ad banner">         
+                     <img src="img/IMG-20170531-WA0020.jpg" alt="ad banner">         
                   </div>
                </div>
             </div>
