--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
                <article class="post-1 line">
                   <!-- image -->
                   <div class="s-12 l-6 post-image">
-                     <a href="post-.html">
                      <img src="img/IMG-20170511-WA0002.jpg" alt="Fashion 1">
                      </a>                
 
@@ -211,9 +210,9 @@
                   </div>
                   <!-- date -->
                   <div class="s-12 l-1 post-date">
-                     <p class="date">02
+                     <p class="date">01
                      </p>
-                     <p class="month">May
+                     <p class="month">June
                      </p>
                   </div>
                </article>
@@ -238,7 +237,7 @@
 
                   <!-- AD REGION -->
                   <div class="advertising margin-bottom">
-                     <img src="img/Unrestrained night🔥🔥 20170529_231154.jpg" alt="ad banner">
+                     <img src="img/IMG_20170531_184051_977.JPG" alt="ad banner">
                   </div>
                </aside>
             </div>
