--- a/post-3.html
+++ b/post-3.html
@@ -107,7 +107,7 @@
                <!-- AD REGION -->
                <div class="line">
                   <div class="advertising horizontal">
-                     <img src="img/banner-horizontal.jpg" alt="ad banner">        
+                     <img src="img/Screenshot (2).png" alt="ad banner">        
                   </div>
                </div>
             </div>
