--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                <!-- AD REGION -->
                <div class="line">
                   <div class="advertising horizontal">
-                     <img src="img/banner-horizontal.jpg" alt="ad banner">          
+                     <img src="img/Screenshot (2).png" alt="ad banner">          
                   </div>
                </div>
             </div>
@@ -117,7 +117,7 @@
                   </div>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/photo.jpg" alt="ad banner">         
+                     <img src="img/IMG_20170531_184051_977.JPG" alt="ad banner">         
                   </div>
                </aside>
             </div>
