--- a/archive.html
+++ b/archive.html
@@ -191,7 +191,7 @@
                   </div>
                   <!-- AD REGION -->         
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170522-WA0000.jpg" alt="ad banner">          
+                     <img src="img/IMG_20170531_184051_977.JPG" alt="ad banner">          
                   </div>
                   <!-- NEWS 2 -->           
                   <img src="img/v1.dDsyMDE4MzQ7ajsxNzMyNzsxMjAwOzE3NzI7MjY1OA" alt="News 2">          
@@ -201,7 +201,7 @@
                   </div>
                   <!-- AD REGION -->         
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170522-WA0000.jpg" alt="ad banner">          
+                     <img src="img/IMG_20170531_184051_977.JPG" alt="ad banner">          
                   </div>
                </aside>
             </div>
