--- a/post-1.html
+++ b/post-1.html
@@ -106,11 +106,11 @@
                     Campus proclaimed 'Huddah' is among the hottest chick on campus.Her pretty eyes completes her looks.
                      </p>
                       <img src="img/IMG-20170523-WA0004.jpg" alt="Fashion">
-                    <h2>7.Latifah Kienja</h2>
-                      <p>
-                        Call it a mixture of samburu breed and a kikuyu bringing the outward of the most perfect beauty in the campus.
+                    <h2>7.Sheila Rose</h2>
+                      <p>She is the kind of a lady who you want to see when you wake up. Her beauty is outstanding.
+                        
                      </p>
-                      <img src="img/IMG-20170519-WA0062.jpg" alt="Fashion">
+                      <img src="img/DSC_7989.JPG" alt="Fashion">
 
                      <h2>6.Esther Gisharu</h2>
                      <p>
@@ -153,7 +153,7 @@
                <!-- AD REGION -->
                <div class="line">
                   <div class="advertising horizontal">
-                     <img src="img/banner-horizontal.jpg" alt="ad banner">         
+                     <img src="img/Screenshot (2).png" alt="ad banner">         
                   </div>
                </div>
             </div>
