--- a/post-5.html
+++ b/post-5.html
@@ -116,7 +116,7 @@
                <!-- AD REGION -->
                <div class="line">
                   <div class="advertising horizontal">
-                     <img src="img/banner-horizontal.jpg" alt="ad banner">         
+                     <img src="img/Screenshot (2).png" alt="ad banner">         
                   </div>
                </div>
             </div>
@@ -131,7 +131,7 @@
                   </div>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170522-WA0000.jpg" alt="ad banner">        
+                     <img src="img/IMG_20170531_184051_977.JPG" alt="ad banner">        
                   </div>
                   <!-- LATEST POSTS -->
                   <div class="aside-block margin-bottom">
