--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
                   <!-- AD REGION -->
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG_20170531_184051_977.JPG" alt="ad banner">
+                     <img src="img/IMG-20170531-WA0006.jpg" alt="ad banner">
                   </div>
                </aside>
             </div>
