--- a/post-5.html
+++ b/post-5.html
@@ -21,6 +21,15 @@
       <![endif]-->     
    </head>
    <body class="size-1140">
+   <!--facebook-->
+   <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.9&appId=108980153033685";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
    <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -77,7 +86,7 @@
                   <div class="post-5 line">
                      <!-- date -->                 
                      <div class="s-12 post-date">
-                        <p class="date">01</p>
+                        <p class="date">03</p>
                         <p class="month">June</p>
                      </div>
                   </div>
@@ -89,26 +98,31 @@
                     Proves charity and giving back to the society is the key. ‘POINTI’ is the name given to him, loves soccer and an IT man. 
                      </p>
                      <img src="img/IMG-20170519-WA0016.jpg" alt="Dude">
+                     <div class="fb-like" data-href="10" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false">
                      <h2>2.Victor Maina</h2>
                      <p>
                         Among the hottest guy in campus.Ladies take it slow ,he is taken.
                      </p>
                      <img src="img/9e6248cd168ae438dd330238de30e201.jpg" alt="Dude">
+                     <div class="fb-like" data-href="11" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false">
                      <h2>3.Said Swalleh</h2>
                      <p>
                     Coastal experiences with an ease in himself in everything he does.
                      </p>
                      <img src="img/IMG-20170523-WA0003.jpg" alt="Dude">
+                     <div class="fb-like" data-href="12" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false">
                      <h2>4.Steven Nyandusi</h2>
                      <p>
                         This guy pulls out the look of suits well enough.
                      </p>
                      <img src="img/IMG-20170519-WA0022.jpg" alt="Dude">
+                     <div class="fb-like" data-href="13" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false">
                      <h2>5.Kingsly</h2>
                      <p>
                      Once the MR MMU 2015-2016 embracing fashion and runways as part of his living.
                      </p>
                      <img src="img/IMG-20170520-WA0001.jpg" alt="Dude">
+                     <div class="fb-like" data-href="14" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false">
                       <p>Hey ladies keep in touch for next week Hunk chart updates</p>
                      <p class="author">Anonymous</p>
                   </div>
